--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,7 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<html>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <%@include file="static/styles.jsp" %>
-
+    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     <title>HTTP Mocker</title>
 </head>
 <body>
